fix: cache de get all categorias